api/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
          name: api-pod
    spec:
      containers:
        - name: api
          image: gcr.io/gke-playground-201706/api:v0.2.0
          imagePullPolicy: Always
