api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    name: api-pod
  ports:
    - port: 8080
